2009-01-27  Thomas Thurman  <tthurman@gnome.org>

        All the window properties are now handled using simple
        window property handlers.  Closes #549886.

	* src/core/window-private.h:
	* src/core/window-props.c:
	* src/core/window.c:

2009-01-26  Thomas Thurman  <tthurman@gnome.org>

        More of the window properties are checked using simple
        window property handlers.  The ones which remain don't
        actually look up the new value in the ordinary way, and
        so are a little trickier to merge.  Added an "initial"
        flag to be on the safe side that the behaviour is the
        same as before (so we don't do things when a window's
        first mapped that we only used to do when a property
        changed).  Partial fix for bug #549886.

	* src/core/window-props.c:
	* src/core/window-props.h:
	* src/core/window.c:

2009-01-25  Elijah Newren  <newren gmail com>

	* src/core/window.c: add support for _NET_WM_MOVERESIZE_CANCEL.

2009-01-10  Thomas Thurman  <tthurman@gnome.org>

	* src/ui/theme.[ch]: add meta_theme_draw_frame_by_name, which
          is needed for the theme editor.

2008-12-26  Thomas Thurman  <tthurman@gnome.org>

        * configure.in: Post-release bump to 2.25.144.

2008-12-26  Thomas Thurman  <tthurman@gnome.org>

        * NEWS: 2.25.89 release.

2008-12-25  Thomas Thurman  <tthurman@gnome.org>

	* src/include/all-keybindings.h: alt-F10 toggles maximisation,
          alt-F5 only restores.  Also rename "unmaximize" to "restore".
	* src/ui/frames.c: Rename "unmaximize" to "restore".
          Closes #343824.

2008-12-25  Frederic Peters  <fpeters@0d.be>

	* src/core/main.c: (main): added call to g_thread_init(), as ORBit2
	stopped doing it and Metacity is using gconf; closes #565517.

2008-12-24  Yanko Kaneti  <yaneti@declera.com>

	* src/metacity.schemas.in.in: add screenshot commands which had
          mistakenly been removed; closes #564343, Launchpad bug 298463,